--- a/factorial.html
+++ b/factorial.html
@@ -16,7 +16,7 @@
       return total;
     }
 
-    var userstring + prompt("Number please: ");
+    var userstring = prompt("Number please: ");
     var usernum = parseInt(userstring);
 
     console.log(usernum + "! is "+ factorial(usernum));
